--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="sep"></div>
       <footer class="foot">
         <div>© <span id="yr"></span> Loom Launcher</div>
-        <div>Страница релиза</div>
+        <div>телеграм канал:https://t.me/loomLauncher</div>
       </footer>
     </section>
   </main>
